# aria-review

./: .env.example  .gitignore  .gitleaks.toml  CONTRIBUTING.md  LICENSE  MONOREPO.md  NOTICE  README.en.md  README.md  SECURITY.md  docker-compose.yml
services/agent/: .dockerignore  .env.example  Dockerfile  README.md  agent_search_bench.py  pyproject.toml  requirements.txt
services/agent/app/: authz.py  cite_check.py  config.py  db.py  llm.py  logging_setup.py  main.py  models.py  net_safety.py  prisma.py  prompts.py  r_client.py  refs.py  report.py  routes_research.py  schemas.py  sciverse.py
services/agent/migrations/: env.py
services/agent/scripts/: check_openapi_drift.py  demo_zero_fabrication.py  eval_grounding.py  gen_contract_fixtures.py  run_agent_e2e.py  run_gap_value.py  run_sciverse_reviews.py  run_slr_e2e.py  verify_runlog.py  wait_for_db.py
services/agent/tests/: conftest.py  helpers_contract.py  test_advanced_a4.py  test_advanced_a5.py  test_agent_e2e_smoke.py  test_agent_endpoints.py  test_agent_ingest_extract_autorun.py  test_ai.py  test_ai_infographic.py  test_ai_job_repo.py  test_ai_job_review_override.py  test_analytics_event.py  test_api_structure.py  test_artifact_crud.py  test_authz.py  test_backfill_metadata.py  test_cite_check.py  test_confirm.py  test_confirm_endpoint.py  test_conftest_session_factory.py  test_contract_fixtures.py  test_corpus.py  test_db_agent_models.py  test_db_models.py  test_demo_zero_fabrication.py  test_entry_isolation.py  test_event_chain.py  test_events_subscribable.py  test_extract_structured.py  test_fulltext.py  (+75 more)
(+390 files in other folders)
